; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_demux_dealloc.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_demux_dealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_internal = type { i32, i32, i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demux_internal*)* @demux_dealloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @demux_dealloc(%struct.demux_internal* %0) #0 {
  %2 = alloca %struct.demux_internal*, align 8
  %3 = alloca i32, align 4
  store %struct.demux_internal* %0, %struct.demux_internal** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %7 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %4
  %11 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %12 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %11, i32 0, i32 4
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @talloc_free(i32 %17)
  br label %19

19:                                               ; preds = %10
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %4

22:                                               ; preds = %4
  %23 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %24 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %23, i32 0, i32 3
  %25 = call i32 @pthread_mutex_destroy(i32* %24)
  %26 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %27 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %26, i32 0, i32 2
  %28 = call i32 @pthread_cond_destroy(i32* %27)
  %29 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %30 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @talloc_free(i32 %31)
  ret void
}

declare dso_local i32 @talloc_free(i32) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @pthread_cond_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
